syntax = "proto3";

package shop;

option csharp_namespace = "ShopifyClone.ProtoCs.Shop.Events";

import "shop/shop_types.proto";

message ShopEvent {
  oneof oneof_type {
    ShopCreated created = 1;
  }
}

message ShopCreated {
  string shop_id = 1;
  shop.ShopType shop_type = 2;
}

message ShopMemberEvent {
  oneof oneof_type {
    ShopMemberAdded added = 1;
    ShopMemberUpdated updated = 2;
    ShopMemberDeleted deleted = 3;
  }
}

message ShopMemberAdded {
  string shop_id = 1;
  string user_id = 2;
  shop.ShopUserType shop_user_type = 3;
}

message ShopMemberUpdated {
  string shop_id = 1;
  string user_id = 2;
  shop.ShopUserType shop_user_type = 3;
}

message ShopMemberDeleted {
  string shop_id = 1;
  string user_id = 2;
}